--- a/views/show_movie.haml
+++ b/views/show_movie.haml
@@ -1,5 +1,25 @@
 %h2= @movie["data"]["title"]
 
+Kevin Bacon number: 
+
+%b= @bacon_path["length"]
+
+%h2 Bacon Path:
+
+%table
+  %tr
+    %th Type
+    %th Name
+
+  - @bacon_nodes.each_with_index do |node, index|
+    %tr
+      - if index.even?
+        %td Movie
+        %td= link_to "/movie/" + node["self"].split('/').last, node["data"]["title"]
+      - else
+        %td Actor
+        %td= link_to "/actor/" + node["self"].split('/').last, node["data"]["name"]
+
 %h2 Cast:
 %table
   %tr
